solved “check“ alignment

--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -25,7 +25,7 @@ header {
     margin-bottom: 100px;
 }
 
-img, header h1{
+header img, header h1{
     margin-top: 10px;
     margin-left: 20px;
     display: inline-block;
@@ -41,7 +41,6 @@ header h1 {
 
 /* modifiche main > nav */
 nav {
-    width: 100%;
     height: 80px;
     line-height: 80px;
     border-bottom: 5px solid rgb(247, 248, 249);
@@ -78,23 +77,25 @@ main section {
     margin: auto;    
 }
 
-li img {
-    height: 30px;
-    line-height: 30px;
-    vertical-align: middle;
-}
-
 ul {
     margin-bottom: 25px;
     list-style-type: none; 
 }
-ul h2:first-child {
-    margin-top: 50px;
-}
 
 li{
-    font-size: 21px;
+    font-size: 22px;
     margin-top: 10px;
+}
+
+li img {
+    height: 25px;
+    line-height: 25px;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+
+ul h2:first-child {
+    margin-top: 50px;
 }
 
 /* modifiche specifiche appuntamenti */
@@ -122,11 +123,4 @@ span.website {
 }
 span.sales {
     background-color: rgb(181, 200, 73);          
-}
-
-
-li, img, li span{
-    height: 40px;
-    line-height: 40px;
-    vertical-align: middle;
 }
